--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -1,5 +1,33 @@
-.logo{
-    width:25%
+.logoSignInFablab{
+    object-fit: contain;
+    
+    height: 100%;
+    width:50%;
+    padding-right: 25px;
+}
+
+.logoSignInUcacue{
+    object-fit: contain;
+    
+    height: 100%;
+    width:80%;
+    padding-left: 10px;
+}
+
+.logoRegisterFablab{
+    object-fit: contain;
+    
+    height: 100%;
+    width:25%;
+    padding-right: 15px;
+}
+
+.logoRegisterUcacue{
+    object-fit: contain;
+    
+    height: 100%;
+    width:55%;
+    padding-left: 5px;
 }
 
 .mainSignIn{
@@ -10,17 +38,24 @@
     border: solid 1px #00000000;
     border-radius: 20px ;
     background-color: white;
-    padding-left: 100px;
     
 }
 
 .mainRegister{
-    max-width: 0px;
     min-width: 300px;
-    max-height: 950px;
     width: 100%;
-    height: 70%;
-    margin: 100px auto;
+    height: 525px;
+    margin: 1% auto;
+    border: solid 1px #00000000;
+    border-radius: 20px ;
+    background-color: white;
+}
+
+.mainEmailVerification{
+    min-width: 150px;
+    width: 100%;
+    height: 400px;
+    margin: 1% auto;
     border: solid 1px #00000000;
     border-radius: 20px ;
     background-color: white;
@@ -38,9 +73,25 @@ body{
     
 }
 
-.button{
-    background-color: #AF1C32;
+.radioButtonGroupUsuario>label>span{
+    font-size: 13px;
 }
+
+.radioButtonGroupUsuario>label>span>span>svg {
+    height: 20px;
+    width: 20px;
+}
+
+.checkBoxUsuario>span{
+    font-size: 12px;
+    color: #747579;
+}
+
+.checkBoxUsuario>span>svg {
+    height: 18px;
+    width: 18px;
+}
+
 
 * {
     font-family: "Co Headline Regular";
