--- a/src/components/style2.module.css
+++ b/src/components/style2.module.css
@@ -5,6 +5,7 @@
     background-color: #E20613;
     overflow: hidden;
     border-end-end-radius: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .mainServices{
@@ -24,16 +25,29 @@
 
 .textNav{
     padding-top: 15%;
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: white;
 }
 
 .container{
     padding-top: 2rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
+    padding-left: 8%;
+    padding-right: 8%;
 }
 
 .imgService{
     border-radius: 8px;
+    width: 100%;
 }
+
+.paddingContainer{
+    padding: 2%;
+}
+
+@media (max-width: 1096px) {
+    /* Cambios de estilo para pantallas con ancho máximo de 768px */
+    .MuiGrid-item {
+      width: 100% !important; /* Establecer ancho al 100% para apilar en una columna */
+    }
+  }
+  
