--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -1,5 +1,5 @@
 
-body{
+.body{
     background-image: url("../public/img/fondoLogin.jpg" );
     background-size: cover;
     background-repeat: no-repeat;
@@ -48,7 +48,7 @@ body{
 .mainRegister{
     min-width: 300px;
     width: 100%;
-    height: 525px;
+    min-height: 525px;
     margin: 1% auto;
     border: solid 1px #00000000;
     border-radius: 20px ;
