--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,7 +1,4 @@
 .mainHeaderNav {
-  width: 100vw;
-  height: fit-content;
-  padding: 1.2rem 2.4rem;
   background-color: #e20613;
   border-end-end-radius: 30px;
 }
@@ -13,6 +10,7 @@
 
 .logoHFabLab {
   width: 5rem;
+  height: 100%;
   background-color: white;
   border-radius: 50%;
 }
