--- a/src/components/styleServices.module.css
+++ b/src/components/styleServices.module.css
@@ -1,42 +1,16 @@
-.mainHeaderNav{
-    width: 100vw;
-    height: 100%;
-    min-width:96vw;
-    background-color: #E20613;
-    border-end-end-radius: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
 
 .mainServices{
-    width: 100vw;
-    min-height: 100vh;
-    min-width:100vw;
-    background-color: white;
+    
     padding: 0px;
-    margin: 0px;
+    margin-top: 75px;
     
 }
 
-.logoHFabLab{
-    width: 15rem;
-}
-
-.textNav{
-    padding-top: 15%;
-    font-size: 1.2rem;
-    color: white;
-}
-
-.container{
-    padding-top: 2rem;
-    padding-left: 8%;
-    padding-right: 8%;
-}
 
 .imgService{
     width: 100%;
     max-height: 200px;
-    
+    object-position: center;
     object-fit: contain;
 }
 
@@ -48,13 +22,12 @@
     align-content: center;
 }
 
-.GridPrintersText{
+.ItemPrinter{
+    display: flex;
+    min-height: 250px;
+    border: solid rgb(121, 113, 113) 1px;
 }
 
-.GridPrincipal{
-
-    padding: 10px;
-}
 
 @media (max-width: 1096px) {
     /* Cambios de estilo para pantallas con ancho máximo de 768px */
