--- a/src/components/style2.module.css
+++ b/src/components/style2.module.css
@@ -2,6 +2,7 @@
     background-color: #E20613;
     border-end-end-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 2px;
 }
 
 .mainServices{
