--- a/src/App.css
+++ b/src/App.css
@@ -26,18 +26,19 @@
   font-family: "Co Headline Regular";
   margin: 0;
   padding: 0;
-  box-sizing: border-box !important;
+  box-sizing: border-box;
 }
 
 body {
   width: 100vw;
   min-height: 100vh;
+}
+
+.mainContainer {
+  min-width: 100%;
+  min-height: calc(100vh - 120px);
   display: grid;
-  grid-template-columns: 1fr;
-  justify-content: center;
-  align-items: start;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  place-content: center;
 }
 
 .link {
