--- a/src/components/3DPrintersService/style.module.css
+++ b/src/components/3DPrintersService/style.module.css
@@ -1,6 +1,7 @@
 
 .mainServices{
-  padding: 25px;
+  padding: 10px;
+  margin-top: 10px;
 }
 
 .GridPrinter{
@@ -9,57 +10,72 @@
   box-shadow: 2px 2px 5px 1px rgba(151, 150, 150, 0.728);
   margin: 10px;
   height: 250px;
-  
+  justify-Content:"center"
 }
-
-.GridPrintersImg{
-  align-content: center;
-  justify-content: center;
-}
-
 
 .BackgroundAnimation1{
 
-  width: 150%;
-  height: 150%;
+  width:  100%;
+  height:  120%;
   background: #cb2028;
   position: absolute;
-  top: -120px;
+  top: -150px;
   right: 0;
-}
+  z-index: 998;
 
+}
 
 .BackgroundAnimation2{
 
-  width: 150%;
-  height: 150%;
+  width: 100%;
+  height: 120%;
   background:  #0f9a49;
   position: absolute;
-  top: -120px;
+  top: -150px;
   right: 0;
-}
+  z-index: 998;
 
+}
 
 .BackgroundAnimation3{
 
-  width: 150%;
-  height: 150%;
+  width: 100%;
+  height: 120%;
   background: #35479d ;
   position: absolute;
-  top: -120px;
+  top: -150px;
   right: 0;
+  z-index: 998;
 }
 
 
+.test{
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  z-index: 999;
+}
+
+.GridPrintersImg{
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  max-width: 100%;
+  max-height: 100%; 
+  overflow: hidden;
+  padding: 15px;
+}
+
 .imgService{
-  width: 100%;
-  max-height: 200px;
+  max-width: 100%; 
+  max-height: 100%; 
   object-fit: contain;
 }
 
-
-
-
+.GridPrintersText{
+  color: black;
+  height: "95%";
+}
 
 @media (max-width: 1096px) {
   /* Cambios de estilo para pantallas con ancho máximo de 768px */
