--- a/src/components/3DPrintersService/style.module.css
+++ b/src/components/3DPrintersService/style.module.css
@@ -4,15 +4,6 @@
   margin-top: 10px;
 }
 
-.GridPrinter{
-  border: 2px solid rgba(89, 82, 82, 0.12);
-  border-radius: 5px;
-  box-shadow: 2px 2px 5px 1px rgba(151, 150, 150, 0.728);
-  margin: 10px;
-  height: 250px;
-  justify-Content:"center"
-}
-
 .BackgroundAnimation1{
 
   width:  100%;
@@ -56,6 +47,20 @@
   z-index: 999;
 }
 
+
+.GridPrinter{
+  border: 2px solid rgba(89, 82, 82, 0.12);
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px 1px rgba(151, 150, 150, 0.728);
+  margin: 10px;
+  height: 250px;
+}
+
+.GridPrinterTopRow{
+  height: 160px;
+  max-width: 100%;
+}
+
 .GridPrintersImg{
   display: flex; 
   align-items: center; 
@@ -63,20 +68,33 @@
   max-width: 100%;
   max-height: 100%; 
   overflow: hidden;
-  padding: 15px;
+  padding-top: 15px;
 }
 
 .imgService{
   max-width: 100%; 
   max-height: 100%; 
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .GridPrintersText{
   color: black;
-  height: "100%";
-  padding:8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.GridBottomRow{
+  background-color: rgba(116, 106, 106, 0.466);
+  color: white;
+  border-radius: 5px;
+  max-width: 100%;
+  max-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}  
+
 
 @media (max-width: 1096px) {
   /* Cambios de estilo para pantallas con ancho máximo de 768px */
