C:/Program Files/Git/agendar

--- a/src/components/Services/style.module.css
+++ b/src/components/Services/style.module.css
@@ -34,8 +34,7 @@
 .imgService{
     object-fit: fill;
     border-radius: 8px;
-    min-width: 100%;
-    max-height: 80%;
+    width: 100%;
 }
 
 .paddingContainer{
