--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,10 @@ body {
 
 .layoutMain {
   display: grid;
-  place-content: center;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-items: center
+  ;
   min-height: 100vh;
   box-sizing: border-box;
 }
