--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,8 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   justify-content: center;
-  align-items: center
-  ;
+  align-items: center;
+  margin-top: 90px;
   min-height: 100vh;
   box-sizing: border-box;
 }
