--- a/src/components/ForgotPassword/style.module.css
+++ b/src/components/ForgotPassword/style.module.css
@@ -4,3 +4,25 @@
   object-fit: contain;
   object-position: center;
 }
+
+.outerbox{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 20px;
+  border-radius: 24px;
+  padding: 20px;
+  overflow: hidden;
+  box-shadow: 5px 5px 15px 5px #ddd;
+}
+
+.innerbox{
+  display: grid;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px;
+  justify-content: center;
+  align-items: center;
+}
