--- a/src/components/Sign-In/style.module.css
+++ b/src/components/Sign-In/style.module.css
@@ -4,3 +4,26 @@
   object-fit: contain;
   object-position: center;
 }
+
+.outerBox{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  border-radius: 24px;
+  padding: 20px;
+  overflow: hidden;
+  box-shadow: 5px 5px 15px 5px #ddd;
+}
+
+.innerBox{
+  display: grid;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px;
+  justify-content: center;
+  align-items: center;
+}
