--- a/src/components/Agendar/style.module.css
+++ b/src/components/Agendar/style.module.css
@@ -8,8 +8,18 @@
     
 }
 
-.paper{
-  padding: 8px; /* Equivalente a p: 2 en theme-ui */
-  display: flex;
-  flex-direction: column;
+
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  background-color: #fff; 
+  border: 2px solid #4d4d4d;
+  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.5); 
+  padding-top: 8px; 
+  padding-left: 16px; 
+  padding-right: 16px; 
+  padding-bottom: 12px;
 }
