--- a/src/components/Profile/style.module.css
+++ b/src/components/Profile/style.module.css
@@ -1,9 +1,28 @@
-.main{
-    width: 100vw;
-    min-height: 100vh;
-    min-width:100vw;
-    background-color: rgb(243, 243, 243);
-    padding: 0;
-    margin: 0;
-    
+.main {
+  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: rgb(243, 243, 243);
+  padding: 0px 0px;
+  margin: 0px;
+}
+
+.contend {
+  margin-top: 25px;
+  margin-right: 15px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.116);
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.p {
+    color: red;
+    margin-bottom: 5px;
 }
