--- a/src/components/Profile/style.module.css
+++ b/src/components/Profile/style.module.css
@@ -19,9 +19,24 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
 }
 
+@media screen and (max-width: 600px) {
+  .center {
+    padding: 0px 0px;
+    max-width: 80%;
+  }
+}
+
+
 .p {
-    color: red;
-    margin-bottom: 5px;
+  color: red;
+  margin-bottom: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  .vertical {
+    writing-mode: vertical-rl;
+  }
 }
