--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -37,9 +37,10 @@
 }
 
 .menuLi {
-  color: whitesmoke;
+  color: whitesmoke !important;
   text-decoration-color: transparent;
   transition: all ease-in-out 0.2s;
+  text-decoration: none;
 }
 
 .menuLi:hover {
